# pythoncourse

./: .coveragerc  .coveralls.yml  .gitignore  .project  .travis.yml  AUTHORS  ChangeLog  README.md  STUDENT.md  conftest.py  pylint.rc  setup.cfg  tox  tox.ini  tox_results.txt  travis.yml
.eggs/pbr-1.9.1-py3.4.egg/EGG-INFO/: PKG-INFO
.pylint.d/: python_course_16041.stats
docs/: getting_started.md  making_exercises.md
python_class_2016_01_01/: module_01_hello_world.py  module_02_if_statement.py
python_class_2016_01_01/tests/: test_00_setup.py  test_01_hello_world.py  test_02_if_statement.py  test_setup.py
python_course_1604/class_01/: exercize_01_hello_world.py  exercize_02_if_statement.py  exercize_03_capture_exception.py  exercize_04_stack_limit.py  exercize_05_while_loop.py  exercize_06_while_break_else.py  ¬
python_course_1604/class_01/tests/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py
python_course_1604/class_02/: .exercize_01_while_loop.py.swp  .exercize_03_break_and_continue.py.swp  exercize_01_while_loop.py  exercize_02_for_loop.py  exercize_03_break_and_continue.py  exercize_04_iterators.py
python_course_1604/class_02/tests/: test_01_while_loop.py  test_02_for_loop2.py  test_03_break_and_continue.py  test_04_iterators.py
python_course_1604/class_03/: exercize_01_yield.py  exercize_02_finally.py
python_course_1604/class_03/tests/: test_01_yield.py  test_02_finally.py
python_course_1604/tests/: test_00.py  test_01.py  test_02.py  utils.py
